Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
12.1(EOL), 12.2(EOL)
-
Not for Release Notes
-
The problem happened only in debug builds, so no needs to mention in the release notes.
-
Q4/2025 Server Maintenance
Description
--let $restart_parameters=--thread-stack=131072
|
--source include/restart_mysqld.inc
|
|
|
SELECT mysql.a(),mysql.a(); |
Leads to:
|
CS 12.2.0 e02f4d7e311e214ea62ff2e59599849e229f4165 (Debug, Clang) Build 07/08/2025 |
mariadbd: /test/12.2_dbg/sql/sql_lex.cc:10645: Item *LEX::make_item_func_or_method_call(THD *, const Lex_ident_cli_st &, const Lex_ident_cli_st &, List<Item> *, const Lex_ident_cli_st &): Assertion `!thd->is_error()' failed.
|
|
CS 12.2.0 e02f4d7e311e214ea62ff2e59599849e229f4165 (Debug, Clang) Build 07/08/2025 |
Core was generated by `/test/MD070825-mariadb-12.2.0-linux-x86_64-dbg/bin/mariadbd --no-defaults --max'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
|
|
[Current thread is 1 (LWP 203125)]
|
(gdb) bt
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
#1 __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
|
#2 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
|
#3 0x00007a2f9c44527e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
|
#4 0x00007a2f9c4288ff in __GI_abort () at ./stdlib/abort.c:79
|
#5 0x00007a2f9c42881b in __assert_fail_base (fmt=0x7a2f9c5d01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x5da11ffe82cb "!thd->is_error()", file=file@entry=0x5da11ffe9416 "/test/12.2_dbg/sql/sql_lex.cc", line=line@entry=10645, function=function@entry=0x5da11ffec349 "Item *LEX::make_item_func_or_method_call(THD *, const Lex_ident_cli_st &, const Lex_ident_cli_st &, List<Item> *, const Lex_ident_cli_st &)") at ./assert/assert.c:96
|
#6 0x00007a2f9c43b517 in __assert_fail (assertion=0x5da11ffe82cb "!thd->is_error()", file=0x5da11ffe9416 "/test/12.2_dbg/sql/sql_lex.cc", line=10645, function=0x5da11ffec349 "Item *LEX::make_item_func_or_method_call(THD *, const Lex_ident_cli_st &, const Lex_ident_cli_st &, List<Item> *, const Lex_ident_cli_st &)") at ./assert/assert.c:105
|
#7 0x00005da11ef2f222 in LEX::make_item_func_or_method_call (this=0x7a10b0005078, thd=0x7a10b0000d58, ca=@0x7a2f982c1928: {<Lex_string_with_metadata_st> = {<st_mysql_const_lex_string> = {str = 0x7a10b0019e90 "test.a()", length = 4}, m_is_8bit = true, m_quote = 0 '\000'}, <No data fields>}, cb=@0x7a2f982c1958: {<Lex_string_with_metadata_st> = {<st_mysql_const_lex_string> = {str = 0x7a10b0019e95 "a()", length = 1}, m_is_8bit = false, m_quote = 0 '\000'}, <No data fields>}, args=0x0, query_fragment=@0x7a2f982c2450: {<Lex_string_with_metadata_st> = {<st_mysql_const_lex_string> = {str = 0x7a10b0019e90 "test.a()", length = 8}, m_is_8bit = false, m_quote = 0 '\000'}, <No data fields>})at /test/12.2_dbg/sql/sql_lex.cc:10645
|
#8 0x00005da11f2d841d in MYSQLparse (thd=0x7a10b0000d58)at /test/12.2_dbg/sql/sql_yacc.yy:11162
|
#9 0x00005da11ef70d7b in parse_sql (thd=0x7a10b0000d58, parser_state=0x7a2f982c2a10, creation_ctx=0x0, do_pfs_digest=true)at /test/12.2_dbg/sql/sql_parse.cc:10302
|
#10 0x00005da11ef594f3 in mysql_parse (thd=0x7a10b0000d58, rawbuf=0x7a10b0019e80 "SELECT test.a(),test.a()", length=24, parser_state=0x7a2f982c2a10) at /test/12.2_dbg/sql/sql_parse.cc:7835
|
#11 0x00005da11ef56a38 in dispatch_command (command=COM_QUERY, thd=0x7a10b0000d58, packet=0x7a10b000b1f9 "SELECT test.a(),test.a()", packet_length=24, blocking=true) at /test/12.2_dbg/sql/sql_parse.cc:1878
|
#12 0x00005da11ef5a213 in do_command (thd=0x7a10b0000d58, blocking=true)at /test/12.2_dbg/sql/sql_parse.cc:1417
|
#13 0x00005da11f1474b9 in do_handle_one_connection (connect=0x5da12980f9c8, put_in_cache=true) at /test/12.2_dbg/sql/sql_connect.cc:1414
|
#14 0x00005da11f14725e in handle_one_connection (arg=0x5da12973b3a8)at /test/12.2_dbg/sql/sql_connect.cc:1326
|
#15 0x00007a2f9c49caa4 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
|
#16 0x00007a2f9c529c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
|
|
Bug Detection Matrix |
Rel o/d Build Commit UniqueID observed
|
CS 10.6 dbg 080825 13f337ce1f295f4aac75db681e00c71f2bf8acaf No bug found
|
CS 10.6 opt 080825 13f337ce1f295f4aac75db681e00c71f2bf8acaf No bug found
|
CS 10.11 dbg 080825 c45a34b2fb10e4e8f768e7e5fe846e9592eb6ea8 No bug found
|
CS 10.11 opt 080825 c45a34b2fb10e4e8f768e7e5fe846e9592eb6ea8 No bug found
|
CS 11.4 dbg 080825 03b31c0bd99390c1984f19a19f22dd6e77b7692e No bug found
|
CS 11.4 opt 080825 03b31c0bd99390c1984f19a19f22dd6e77b7692e No bug found
|
CS 11.8 dbg 080825 1a446ccc48528e88a3cd6cd1d1ec9e7492d342ca No bug found
|
CS 11.8 opt 080825 1a446ccc48528e88a3cd6cd1d1ec9e7492d342ca No bug found
|
CS 12.0 dbg 080825 aab83aecdca15738d114cf5a2f223f1d12e4e6bd No bug found
|
CS 12.0 opt 080825 aab83aecdca15738d114cf5a2f223f1d12e4e6bd No bug found
|
CS 12.1 dbg 080825 033471a367b4c60b7262e64f43f46b02e95b9d74 !thd->is_error()|SIGABRT|LEX::make_item_func_or_method_call|MYSQLparse|parse_sql|mysql_parse
|
CS 12.1 opt 080825 033471a367b4c60b7262e64f43f46b02e95b9d74 No bug found
|
CS 12.2 dbg 080825 e02f4d7e311e214ea62ff2e59599849e229f4165 !thd->is_error()|SIGABRT|LEX::make_item_func_or_method_call|MYSQLparse|parse_sql|mysql_parse
|
CS 12.2 opt 080825 e02f4d7e311e214ea62ff2e59599849e229f4165 No bug found
|
ES 10.5 dbg 080825 70586522eacf09d04d49962072e14325a75d8155 No bug found
|
ES 10.5 opt 080825 70586522eacf09d04d49962072e14325a75d8155 No bug found
|
ES 10.6 dbg 080825 9b794f34b48fb7eee490b6da44edc0f33a947447 No bug found
|
ES 10.6 opt 080825 9b794f34b48fb7eee490b6da44edc0f33a947447 No bug found
|
ES 11.4 dbg 080825 a1c03ccd54b582e75506687ee19b273ca897f261 No bug found
|
ES 11.4 opt 080825 a1c03ccd54b582e75506687ee19b273ca897f261 No bug found
|
ES 11.8 dbg 080825 4cdf75ab6ba37d4e7e208690785e880ed3176f2f No bug found
|
ES 11.8 opt 080825 4cdf75ab6ba37d4e7e208690785e880ed3176f2f No bug found
|
MS 5.5 dbg 070123 bac287c315b1792e7ae33f91add6a60292f9bae8 No bug found
|
MS 5.5 opt 070123 bac287c315b1792e7ae33f91add6a60292f9bae8 No bug found
|
MS 5.6 dbg 070123 dab95781a1244104d6b87020ac2fc4d190ba2946 No bug found
|
MS 5.6 opt 070123 dab95781a1244104d6b87020ac2fc4d190ba2946 No bug found
|
MS 5.7 dbg 070525 f7680e98b6bbe3500399fbad465d08a6b75d7a5c No bug found
|
MS 5.7 opt 070525 f7680e98b6bbe3500399fbad465d08a6b75d7a5c No bug found
|
MS 8.0 dbg 060224 49ef33f7edadef3ae04665e73d1babd40179a4f1 No bug found
|
MS 8.0 opt 060224 49ef33f7edadef3ae04665e73d1babd40179a4f1 No bug found
|
MS 9.1 dbg 211024 61a3a1d8ef15512396b4c2af46e922a19bf2b174 No bug found
|
MS 9.1 opt 211024 61a3a1d8ef15512396b4c2af46e922a19bf2b174 No bug found
|
The assertion happens after this commit
commit 41014a4ecd8c0cbcdc527be59f36b8b3f3ed2d76
|
Author: Iqbal Hassan <iqbal@hasprime.com>
|
Date: Fri Oct 11 13:06:20 2024 +0800
|
|
|
MDEV-34319: DECLARE TYPE .. TABLE OF .. INDEX BY in stored routines
|
|
This patch adds support for associative arrays in stored procedures
|
for sql_mode=ORACLE.
|
No UB/ASAN issues observed.
Attachments
Issue Links
- is caused by
-
MDEV-34319 Associative arrays: DECLARE TYPE .. TABLE OF .. INDEX BY in stored routines
-
- Closed
-