MDEV-37408 Assertion `!thd->is_error()' failed in LEX::make_item_func_or_method_call upon SELECT or WITH

Removing a wrong DBUG_ASSERT from LEX::make_item_func_or_method_call(),
as this method can be called with an already raised SQL error.